<resources>
    <string name="app_name">MySecondApplication</string>
    <string name="action_settings">Settings</string>
    <string name="hint_message">Enter a Message</string>
    <string name="button_text">Send Data</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>

    <string name="alarm">ALARM</string>
</resources>
