<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:id="@+id/fist_name"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/last_name"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:id="@+id/last_name"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/fist_name"
        android:layout_alignParentRight="true"/>

</RelativeLayout>